--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "connect-timeout": "^1.9.0",
     "cross-env": "^5.1.4",
@@ -60,8 +61,9 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "lodash": "^4.17.5",
+    "axios": "^0.18.0",
     "babel-runtime": "^6.9.2",
-    "js-url-helper": "0.1.0"
+    "js-url-helper": "0.1.0",
+    "lodash": "^4.17.5"
   }
 }
