--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "connect-timeout": "^1.9.0",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "del": "^3.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
