--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -62,6 +63,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "antd": "^3.7.3",
     "axios": "^0.18.0",
     "babel-runtime": "^6.9.2",
     "js-url-helper": "0.1.0",
