--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-multi-seed",
-  "version": "0.0.2",
-  "description": "Multi page hybrid application. While supporting new features such as react and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
+  "version": "0.1.0",
+  "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,13 +22,15 @@
     "multi",
     "seed",
     "jquery",
-    "react"
+    "react",
+    "vue"
   ],
   "author": "alex86gbk",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-env": "^1.7.0",
@@ -50,13 +52,16 @@
     "gulp-sequence": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.0.4",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "postcss-loader": "^2.1.3",
     "string-replace-loader": "^2.1.1",
     "style-loader": "^0.20.3",
     "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^1.0.1",
+    "vue-loader": "^15.4.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.4.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
@@ -66,6 +71,7 @@
     "antd": "^3.7.3",
     "axios": "^0.18.0",
     "babel-runtime": "^6.9.2",
+    "element-ui": "^2.4.6",
     "js-url-helper": "0.1.0",
     "lodash": "^4.17.5"
   }
