--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "js-multi-seed",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
     "precommit": "lint-staged",
     "lint-staged": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "devWebpack": "cross-env NODE_ENV=development webpack",
-    "local": "npm run devWebpack && cross-env API=local webpack-dev-server",
-    "dev": "npm run devWebpack && cross-env API=dev webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.production.config.js && npm run version",
-    "analyzer": "cross-env NODE_ENV=production webpack --config webpack.production.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
-    "version": "gulp version",
-    "compass": "gulp compass",
+    "webpack:development": "cross-env NODE_ENV=development webpack --config config/webpack.config.js",
+    "webpack:production": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js",
+    "webpackDevServer:apiLocal": "cross-env API=local webpack-dev-server --config config/webpack.config.js",
+    "webpackDevServer:apiDev": "cross-env API=dev webpack-dev-server --config config/webpack.config.js",
+    "local": "npm run webpack:development && npm run webpackDevServer:apiLocal",
+    "dev": "npm run webpack:development && npm run webpackDevServer:apiDev",
+    "build": "npm run webpack:production && npm run glup:version",
+    "analyzer": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
+    "glup:version": "gulp version",
+    "glup:compass": "gulp compass",
     "gemCompass": "gem sources -a https://ruby.taobao.org/ --remove https://rubygems.org/ && gem install compass -v 1.0.3"
   },
   "repository": {
@@ -79,10 +81,11 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "antd": "^3.7.3",
+    "antd": "3.10.1",
     "axios": "^0.18.0",
     "babel-runtime": "^6.9.2",
-    "element-ui": "^2.4.6",
+    "crypto-js": "^3.1.9-1",
+    "element-ui": "2.4.6",
     "js-url-helper": "0.1.0",
     "lodash": "^4.17.5"
   },
