简化webpack-dev-server输出信息；新增404指向404.html

--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "precommit": "lint-staged",
     "lint-staged": "lint-staged",
-    "webpack:development": "cross-env NODE_ENV=development webpack --config config/webpack.config.js",
     "webpack:production": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js",
-    "webpackDevServer:apiLocal": "cross-env API=local webpack-dev-server --config config/webpack.config.js",
-    "webpackDevServer:apiDev": "cross-env API=dev webpack-dev-server --config config/webpack.config.js",
-    "local": "npm run webpack:development && npm run webpackDevServer:apiLocal",
-    "dev": "npm run webpack:development && npm run webpackDevServer:apiDev",
+    "local": "cross-env API=local webpack-dev-server --config config/webpack.config.js",
+    "dev": "cross-env API=dev webpack-dev-server --config config/webpack.config.js",
     "build": "npm run webpack:production && npm run glup:version",
     "analyzer": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "glup:version": "gulp version",
