--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "precommit": "lint-staged",
     "lint-staged": "lint-staged",
+    "dev-server": "webpack-dev-server --config config/webpack.config.js",
+    "mock-server": "node mock/service",
     "webpack:production": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js",
     "local": "cross-env API=local webpack-dev-server --config config/webpack.config.js",
     "dev": "cross-env API=dev webpack-dev-server --config config/webpack.config.js",
-    "local:cli": "webpack-dev-server --config config/webpack.config.js",
-    "mock:cli": "node mock/service",
     "build": "npm run webpack:production && npm run glup:version",
     "analyzer": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "glup:version": "gulp version",
