变更模拟数据取用逻辑

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "js-multi-seed",
-  "version": "0.1.1",
+  "version": "0.2.0-a.1",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
     "precommit": "lint-staged",
     "lint-staged": "lint-staged",
-    "dev-server": "webpack-dev-server --config config/webpack.config.js",
-    "mock-server": "node mock/service",
-    "webpack:production": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js",
-    "local": "cross-env API=local webpack-dev-server --config config/webpack.config.js",
-    "dev": "cross-env API=dev webpack-dev-server --config config/webpack.config.js",
+    "dev-server": "webpack-dev-server --config .usr/local/dev-server.js",
+    "mock-server": "node .usr/local/mock-server.js",
+    "webpack:production": "cross-env NODE_ENV=production webpack --config .usr/local/production.js",
+    "local": "cross-env API=local webpack-dev-server --config .usr/local/dev-server.js",
+    "dev": "cross-env API=dev webpack-dev-server --config .usr/local/dev-server.js",
     "build": "npm run webpack:production && npm run glup:version",
-    "analyzer": "cross-env NODE_ENV=production webpack --config config/webpack.production.config.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
+    "analyzer": "cross-env NODE_ENV=production webpack --config .usr/local/production.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "glup:version": "gulp version",
     "glup:compass": "gulp compass",
     "gemCompass": "gem sources -a https://ruby.taobao.org/ --remove https://rubygems.org/ && gem install compass -v 1.0.3"
