--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "js-multi-seed",
   "version": "0.2.0-a.1",
+  "JMSVersion": "0.2.0-a.1",
+  "JMSAlias": "js-multi-seed release 0.2.0",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
@@ -31,63 +33,63 @@
   "author": "alex86gbk",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-component": "^1.1.1",
-    "babel-plugin-import": "^1.8.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "connect-timeout": "^1.9.0",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "del": "^3.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "exit-hook": "^2.0.0",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "glob": "^7.1.2",
-    "gulp": "^3.9.1",
-    "gulp-compass": "^2.1.0",
-    "gulp-rev": "^8.1.1",
-    "gulp-rev-collector": "^1.3.1",
-    "gulp-sequence": "^1.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "lint-staged": "^7.2.2",
-    "postcss-loader": "^2.1.3",
-    "pre-commit": "^1.2.2",
-    "string-replace-loader": "^2.1.1",
-    "style-loader": "^0.20.3",
-    "transfer-webpack-plugin": "^0.1.4",
-    "url-loader": "^1.0.1",
-    "vue-loader": "^15.4.1",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.4.1",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.1"
+    "autoprefixer": "8.2.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-component": "1.1.1",
+    "babel-plugin-import": "1.8.0",
+    "babel-plugin-transform-runtime": "6.9.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "clean-webpack-plugin": "0.1.19",
+    "connect-timeout": "1.9.0",
+    "cross-env": "5.1.4",
+    "css-loader": "0.28.11",
+    "del": "3.0.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "exit-hook": "2.0.0",
+    "express": "4.16.3",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.11",
+    "glob": "7.1.2",
+    "gulp": "3.9.1",
+    "gulp-compass": "2.1.0",
+    "gulp-rev": "8.1.1",
+    "gulp-rev-collector": "1.3.1",
+    "gulp-sequence": "1.0.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "less": "3.8.1",
+    "less-loader": "4.1.0",
+    "lint-staged": "7.2.2",
+    "postcss-loader": "2.1.3",
+    "pre-commit": "1.2.2",
+    "string-replace-loader": "2.1.1",
+    "style-loader": "0.20.3",
+    "transfer-webpack-plugin": "0.1.4",
+    "url-loader": "1.0.1",
+    "vue-loader": "15.4.1",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.5.17",
+    "webpack": "4.4.1",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
     "antd": "3.10.1",
-    "axios": "^0.18.0",
-    "babel-runtime": "^6.9.2",
-    "crypto-js": "^3.1.9-1",
+    "axios": "0.18.0",
+    "babel-runtime": "6.9.2",
+    "crypto-js": "3.1.9-1",
     "element-ui": "2.4.6",
     "js-url-helper": "0.1.0",
-    "lodash": "^4.17.5"
+    "lodash": "4.17.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": "eslint"
