--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "less": "3.8.1",
     "less-loader": "4.1.0",
     "lint-staged": "7.2.2",
+    "opn": "5.4.0",
     "postcss-loader": "2.1.3",
     "pre-commit": "1.2.2",
     "string-replace-loader": "2.1.1",
@@ -95,7 +96,9 @@
     "linters": {
       "src/**/*.{js,jsx}": "eslint"
     },
-    "ignore": ["src/assets/**/*.js"]
+    "ignore": [
+      "src/assets/**/*.js"
+    ]
   },
   "pre-commit": [
     "lint-staged"
