--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-multi-seed",
-  "version": "0.2.0-a.1",
-  "JMSVersion": "0.2.0-a.1",
-  "alias": "js-multi-seed release 0.2.0",
+  "version": "0.2.1",
+  "JMSVersion": "0.2.1",
+  "alias": "js-multi-seed release 0.2.1",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
