--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "import/no-extraneous-dependencies": [0],
     "no-use-before-define": [0],
     "no-unused-vars": [1],
+    "no-eval": [1],
     "jsx-a11y/no-static-element-interactions": [0],
     "jsx-a11y/no-noninteractive-element-interactions": [0],
     "jsx-a11y/click-events-have-key-events": [0],
