--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "postcss-loader": "2.1.3",
     "pre-commit": "1.2.2",
     "string-replace-loader": "2.1.1",
+    "strip-json-comments": "2.0.1",
     "style-loader": "0.20.3",
     "transfer-webpack-plugin": "0.1.4",
     "url-loader": "1.0.1",
