--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "7.1.4",
     "babel-plugin-component": "1.1.1",
     "babel-plugin-import": "1.8.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
     "babel-plugin-transform-runtime": "6.9.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
@@ -91,7 +92,9 @@
     "crypto-js": "3.1.9-1",
     "element-ui": "2.4.6",
     "js-url-helper": "0.1.0",
-    "lodash": "4.17.5"
+    "lodash": "4.17.5",
+    "mobx": "5.9.4",
+    "mobx-react": "5.4.3"
   },
   "lint-staged": {
     "linters": {
