--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     "glob": "7.1.2",
     "gulp": "3.9.1",
     "gulp-compass": "2.1.0",
+    "gulp-minify-css": "1.2.4",
     "gulp-rev": "8.1.1",
     "gulp-rev-collector": "1.3.1",
     "gulp-sequence": "1.0.0",
+    "gulp-uglify": "3.0.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "less": "3.8.1",
@@ -72,6 +74,7 @@
     "opn": "5.4.0",
     "postcss-loader": "2.1.3",
     "pre-commit": "1.2.2",
+    "sass": "1.20.3",
     "string-replace-loader": "2.1.1",
     "strip-json-comments": "2.0.1",
     "style-loader": "0.20.3",
