--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-multi-seed",
-  "version": "0.2.4",
-  "JMSVersion": "0.2.4",
-  "alias": "js-multi-seed release 0.2.4",
+  "version": "0.3.0-react",
+  "JMSVersion": "0.3.0-react",
+  "alias": "js-multi-seed release 0.3.0-react",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
@@ -27,8 +27,7 @@
     "multi",
     "seed",
     "jquery",
-    "react",
-    "vue"
+    "react"
   ],
   "author": "alex86gbk",
   "license": "ISC",
@@ -80,9 +79,6 @@
     "style-loader": "0.20.3",
     "transfer-webpack-plugin": "0.1.4",
     "url-loader": "1.0.1",
-    "vue-loader": "15.4.1",
-    "vue-style-loader": "4.1.2",
-    "vue-template-compiler": "2.5.17",
     "webpack": "4.4.1",
     "webpack-bundle-analyzer": "2.11.1",
     "webpack-cli": "3.1.1",
@@ -93,7 +89,6 @@
     "axios": "0.18.0",
     "babel-runtime": "6.9.2",
     "crypto-js": "3.1.9-1",
-    "element-ui": "2.4.6",
     "js-url-helper": "0.1.0",
     "lodash": "4.17.5",
     "mobx": "5.9.4",
