--- a/package.json
+++ b/package.json
@@ -47,24 +47,24 @@
     "clean-webpack-plugin": "0.1.19",
     "connect-timeout": "1.9.0",
     "cross-env": "5.1.4",
-    "css-loader": "0.28.11",
+    "css-loader": "3.2.0",
+    "cssnano": "4.1.10",
     "del": "3.0.0",
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
     "exit-hook": "2.0.0",
     "express": "4.16.3",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
     "glob": "7.1.2",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
+    "gulp-clean-css": "4.2.0",
     "gulp-compass": "2.1.0",
-    "gulp-minify-css": "1.2.4",
     "gulp-rev": "8.1.1",
     "gulp-rev-collector": "1.3.1",
-    "gulp-sequence": "1.0.0",
     "gulp-uglify": "3.0.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -72,7 +72,7 @@
     "less-loader": "4.1.0",
     "lint-staged": "7.2.2",
     "opn": "5.4.0",
-    "postcss-loader": "2.1.3",
+    "postcss-loader": "3.0.0",
     "pre-commit": "1.2.2",
     "sass": "1.20.3",
     "string-replace-loader": "2.1.1",
@@ -89,12 +89,12 @@
     "webpack-dev-server": "3.1.11"
   },
   "dependencies": {
-    "antd": "3.10.1",
+    "antd": "3.13.5",
     "axios": "0.18.1",
     "babel-runtime": "6.9.2",
     "crypto-js": "3.1.9-1",
     "element-ui": "2.4.6",
-    "js-url-helper": "0.1.0",
+    "js-url-helper": "0.1.4-beta",
     "lodash": "4.17.13",
     "mobx": "5.9.4",
     "mobx-react": "5.4.3"
