修改V8默认内存限制，防止编译内容过多导致内存溢出；持续编译中修改文件不主动编译所有入口文件，只编译有修改的；添加编译进度显示；

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "global-require": [0],
     "import/prefer-default-export": [0],
+    "react/jsx-fragments": [0],
     "react/jsx-no-bind": [0],
     "react/prop-types": [0],
     "react/prefer-stateless-function": [0],
@@ -65,6 +66,7 @@
     }
   },
   "globals": {
-    "layer": true
+    "layer": true,
+    "JMSPublicPath": true
   }
 }
