--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "js-multi-seed",
-  "version": "0.3.0-react",
-  "JMSVersion": "0.3.0-react",
-  "alias": "js-multi-seed release 0.3.0-react",
+  "version": "0.3.1-react",
+  "JMSVersion": "0.3.1-react",
+  "alias": "js-multi-seed release 0.3.1-react",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
     "precommit": "lint-staged",
     "lint-staged": "lint-staged",
-    "dev-server": "webpack-dev-server --config .usr/local/dev-server.js",
+    "dev-server": "node .usr/scripts/dev.js",
     "mock-server": "node .usr/local/mock-server.js",
-    "webpack:production": "cross-env NODE_ENV=production webpack --config .usr/local/production.js --progress",
-    "local": "cross-env API=local webpack-dev-server --config .usr/local/dev-server.js",
-    "dev": "cross-env API=dev webpack-dev-server --config .usr/local/dev-server.js",
+    "webpack:production": "node .usr/scripts/prod.js",
+    "local": "node .usr/scripts/dev.js local",
+    "dev": "node .usr/scripts/dev.js dev",
     "build": "npm run webpack:production && npm run glup:version",
-    "analyzer": "cross-env NODE_ENV=production webpack --config .usr/local/production.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
+    "analyzer": "node .usr/scripts/analyzer.js",
     "glup:version": "gulp version",
     "glup:compass": "gulp compass",
     "gemCompass": "gem sources -a https://ruby.taobao.org/ --remove https://rubygems.org/ && gem install compass -v 1.0.3"
@@ -45,8 +45,9 @@
     "babel-preset-stage-0": "6.24.1",
     "clean-webpack-plugin": "0.1.19",
     "connect-timeout": "1.9.0",
+    "copy-webpack-plugin": "5.1.1",
     "cross-env": "5.1.4",
-    "css-loader": "3.2.0",
+    "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "del": "3.0.0",
     "eslint": "6.5.1",
@@ -65,20 +66,21 @@
     "gulp-rev": "8.1.1",
     "gulp-rev-collector": "1.3.1",
     "gulp-uglify": "3.0.2",
+    "happypack": "5.0.1",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin-to-multihtml": "3.2.1",
     "less": "3.8.1",
-    "less-loader": "4.1.0",
+    "less-loader": "5.0.0",
     "lint-staged": "7.2.2",
     "opn": "5.4.0",
     "postcss-loader": "3.0.0",
     "pre-commit": "1.2.2",
+    "progress-bar-webpack-plugin": "1.12.1",
     "sass": "1.20.3",
     "string-replace-loader": "2.1.1",
     "strip-json-comments": "2.0.1",
-    "style-loader": "0.20.3",
-    "transfer-webpack-plugin": "0.1.4",
-    "url-loader": "1.0.1",
+    "style-loader": "1.1.2",
+    "url-loader": "3.0.0",
     "webpack": "4.4.1",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.1.1",
