回归使用html-webpack-plugin，新版本编译性能更好，支持多页只重新编译修改的文件

--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "gulp-uglify": "3.0.2",
     "happypack": "5.0.1",
     "html-loader": "0.5.5",
-    "html-webpack-plugin-to-multihtml": "3.2.1",
+    "html-webpack-injector": "1.1.4",
+    "html-webpack-plugin": "4.3.0",
     "less": "3.8.1",
     "less-loader": "5.0.0",
     "lint-staged": "7.2.2",
