--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-multi-seed",
-  "version": "0.4.0-react",
-  "JMSVersion": "0.4.0-react",
-  "alias": "js-multi-seed release 0.4.0-react",
+  "version": "1.1.0-react",
+  "JMSVersion": "1.1.0-react",
+  "alias": "js-multi-seed release 1.1.0-react",
   "description": "Multi page hybrid application. While supporting new features such as React, Vue and ES6, it is compatible with the use of traditional web technologies such as jQuery.",
   "main": "",
   "scripts": {
@@ -13,10 +13,10 @@
     "webpack:production": "node .usr/scripts/prod.js",
     "local": "node .usr/scripts/dev.js local",
     "dev": "node .usr/scripts/dev.js dev",
-    "build": "npm run webpack:production && npm run glup:version",
+    "build": "npm run webpack:production && npm run gulp:version",
     "analyzer": "node .usr/scripts/analyzer.js",
-    "glup:version": "gulp version",
-    "glup:compass": "gulp compass",
+    "gulp:version": "gulp version",
+    "gulp:compass": "gulp compass",
     "gemCompass": "gem sources -a https://ruby.taobao.org/ --remove https://rubygems.org/ && gem install compass -v 1.0.3"
   },
   "repository": {
@@ -32,17 +32,35 @@
   "author": "alex86gbk",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.12.1",
+    "@babel/runtime-corejs2": "^7.12.5",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "autoprefixer": "8.2.0",
-    "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
-    "babel-loader": "7.1.4",
+    "babel-loader": "^8.0.0",
     "babel-plugin-component": "1.1.1",
     "babel-plugin-import": "1.8.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.5",
-    "babel-plugin-transform-runtime": "6.9.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
     "clean-webpack-plugin": "0.1.19",
     "connect-timeout": "1.9.0",
     "copy-webpack-plugin": "5.1.1",
@@ -66,7 +84,7 @@
     "gulp-rev": "8.1.1",
     "gulp-rev-collector": "1.3.1",
     "gulp-uglify": "3.0.2",
-    "happypack": "5.0.1",
+    "hard-source-webpack-plugin": "0.13.1",
     "html-loader": "0.5.5",
     "html-webpack-injector": "1.1.4",
     "html-webpack-plugin": "4.3.0",
@@ -74,6 +92,7 @@
     "less-loader": "5.0.0",
     "lint-staged": "7.2.2",
     "opn": "5.4.0",
+    "postcss": "^7.0.29",
     "postcss-loader": "3.0.0",
     "pre-commit": "1.2.2",
     "progress-bar-webpack-plugin": "1.12.1",
@@ -81,6 +100,7 @@
     "string-replace-loader": "2.1.1",
     "strip-json-comments": "2.0.1",
     "style-loader": "1.1.2",
+    "typescript": "^4.0.5",
     "url-loader": "3.0.0",
     "webpack": "4.4.1",
     "webpack-bundle-analyzer": "3.3.2",
@@ -90,7 +110,6 @@
   "dependencies": {
     "antd": "3.13.5",
     "axios": "0.18.1",
-    "babel-runtime": "6.9.2",
     "crypto-js": "3.1.9-1",
     "js-cookie": "2.2.0",
     "js-url-helper": "0.1.4-beta",
